--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 
-{% include career-profile.html %}
+{% include working-experiences.html %}
 
 {% unless site.data.data.sidebar.education %}
   {% include education.html %}
